--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="add_Food_category">類別</string>
     <string name="add_Food_name">名稱</string>
     <string name="add_Food_count">數量</string>
+    <string name="add_Food_unit">單位</string>
     <string name="add_Food_StorageLocation">存放位置</string>
+    <string name="add_Food_StorageTime">保存期限</string>
 
 </resources>
